<resources>
    <string name="app_name">Drevodavec</string>
    <string name="button">bt1</string>
    <string name="button2">bt2</string>
    <string name="button3">bt3</string>
    <string name="button4">bt4</string>
    <string name="button5">bt5</string>
    <string name="button6">bt6</string>
    <string name="button7">bt7</string>
    <string name="button8">bt8</string>
    <string name="hello_drevodavec">Hello drevodavec!</string>
    <string name="button_size_00">S01</string>
    <string name="button_size_02">S02</string>
    <string name="button_size_03">S03</string>
    <string name="button_size_04">S04</string>
    <string name="button_size_05">S05</string>
    <string name="button_size_06">S06</string>
    <string name="button_size_07">S07</string>
    <string name="button_size_08">S08</string>
    <string name="button_size_09">S09</string>
    <string name="button_size_10">S10</string>
    <string name="button_size_11">S11</string>
    <string name="button_size_12">S12</string>
    <string name="button_size_13">S13</string>
    <string name="button_size_14">S14</string>
    <string name="button_size_15">S15</string>
    <string name="button_size_16">S16</string>
    <string name="button_size_17">S17</string>
    <string name="button_size_18">S18</string>
    <string name="velkost_stromu">velkost stromu</string>
    <string name="_15">15</string>
    <string name="sync">Sync</string>
    <string name="new_file">New file</string>
</resources>